--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -138,7 +138,7 @@ else()
 endif()
 
 # Proto file
-get_filename_component(hw_proto "../protos/helloworld.proto" ABSOLUTE)
+get_filename_component(hw_proto "./voxualize-protos/helloworld.proto" ABSOLUTE)
 get_filename_component(hw_proto_path "${hw_proto}" PATH)
 
 # Generated sources
