Add conversion of RGBA pixel data to YUV420 before encoding

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -189,5 +189,6 @@ foreach(_target
     ${Boost_FILESYSTEM_LIBRARY}
     ${Boost_SYSTEM_LIBRARY}
     "/usr/lib/x86_64-linux-gnu/libavcodec.so.58"
-    "/usr/lib/x86_64-linux-gnu/libavutil.so.56")
+    "/usr/lib/x86_64-linux-gnu/libavutil.so.56"
+    "/usr/lib/x86_64-linux-gnu/libswscale.so.5")
 endforeach()
