Stream encoded frame and add zfp but do not envoke related methods

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -191,6 +191,6 @@ foreach(_target
     "/usr/lib/x86_64-linux-gnu/libavcodec.so.58"
     "/usr/lib/x86_64-linux-gnu/libavutil.so.56"
     "/usr/lib/x86_64-linux-gnu/libswscale.so.5"
-    # "/usr/lib/libzfp.so"
+    "/usr/lib/libzfp.so"
     )
 endforeach()
